--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     padding: 20px;
 }
 
-input {
+.display {
     font-size: 48px;
     grid-column: 1 / 5;
     grid-row: 1 / 3;
@@ -35,6 +35,9 @@ input {
     outline: none;
     text-align: right;
     padding-top: 50px;
+    pointer-events: none; /* desativa todos os cliques e interações */
+    caret-color: transparent; /* deixa o cursor invisível se por acaso focar */
+    user-select: none; /* impede seleção do texto */
 }
 
 button {
