--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    background-color: #DAF0FF;
+    /* background-color: #DAF0FF; */
+    background-color: #fcdebd;
     height: 100vh;
     width: 100vw;
     display: grid;
