--- a/style.css
+++ b/style.css
@@ -151,7 +151,6 @@ button:active{
     }
 
     .titulo {
-        width: 90%;
         font-size: 24px;
         height: auto;
         padding: 10px;
@@ -159,7 +158,12 @@ button:active{
     
     .historico-section {
         font-size: 12px;
-        width: 90%;
+    }
+
+    .titulo
+    .historico-section {
+        width: 95%;
+        max-width: 320px;
     }
 
 }
